fix the spacing on the feature button

--- a/app/assets/stylesheets/hyku.scss
+++ b/app/assets/stylesheets/hyku.scss
@@ -466,3 +466,7 @@ body.public-facing {
 .mb-30 {
   margin-bottom: 30px;
 }
+
+.btn-primary.feature {
+  margin-left: 4px;
+}
